# run-this

./: Cargo.toml  README.md  install.ps1  install.sh  package.json  run-this.json  run_tests.sh
.github/workflows/: auto-tag.yml  release.yml
src/: main.rs
src/tests/: cli_tests.rs  mod.rs  platform_tests.rs  unit_tests.rs
